--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Шиномонтаж — Бронь</title>
-<link rel="stylesheet" href="style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Шиномонтаж — Бронь</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="wrap">
@@ -31,9 +31,10 @@
         <select id="serviceSelect">
           <option>Балансировка</option><option>Замена резины</option><option>Ремонт шины</option>
         </select>
-        <input type="date" id="guestDate"/>
+        <input type="date" id="guestDate" />
         <select id="guestTime"></select>
       </div>
+
       <div class="row">
         <button id="bookBtn">Записаться</button>
         <span id="bookMsg" class="msg"></span>
@@ -58,9 +59,10 @@
       <p class="hint">Пароли проверяются только на сервере — в этом файле их нет.</p>
     </section>
 
-    <!-- Admin area -->
+    <!-- Admin -->
     <section class="card hidden" id="adminCard">
       <h2>Кабинет</h2>
+
       <div class="controls">
         <button id="refreshBtn">Обновить</button>
         <button id="noBookingBtn">Добавить без записи</button>
@@ -79,7 +81,6 @@
 
       <div id="recordsList"></div>
     </section>
-
   </div>
 
   <script src="script.js"></script>
